# Hands-On-Data-Analysis-with-Pandas-2nd-edition

./: .gitignore  pyproject.toml
.virtual_documents/ch_01/: introduction_to_data_analysis.ipynb
ch_01/: introduction_to_data_analysis.ipynb
