[tool.poetry]
name = "hands-on-data-analysis-with-pandas-2nd-edition"
version = "0.1.0"
description = "Hands on data analysis with Pandas 2nd edition"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
readme = "README.md"
packages = [{include = "hands_on_data_analysis_with_pandas_2nd_edition"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
graphviz = "^0.20.1"
imbalanced-learn = "^0.10.1"
ipympl = "^0.9.2"
jupyterlab = "^3.5.3"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
pandas = "^1.5.3"
requests = "^2.28.2"
scikit-learn = "^1.2.1"
scipy = "^1.10.0"
seaborn = "^0.12.2"
sqlalchemy = "^2.0.0"
statsmodels = "^0.13.5"
wheel = "^0.38.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
